hphp/test/slow/yield/dispose.php.expectf
Fatal error: 'yield' is not allowed in constructors or magic methods in %s/dispose.php on line 5
